--- a/GoalTracker/package.json
+++ b/GoalTracker/package.json
@@ -15,11 +15,20 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^11.1.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
+    "lucide-vue-next": "^0.446.0",
     "pinia": "^2.2.2",
+    "radix-vue": "^1.9.6",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
   "devDependencies": {
+    "@iconify-json/radix-icons": "^1.2.0",
+    "@iconify/vue": "^4.1.2",
     "@playwright/test": "^1.44.1",
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
@@ -30,12 +39,15 @@
     "@vue/eslint-config-typescript": "^13.0.0",
     "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8.57.0",
     "eslint-plugin-playwright": "^1.6.2",
     "eslint-plugin-vue": "^9.23.0",
     "jsdom": "^24.1.0",
     "npm-run-all2": "^6.2.0",
     "prettier": "^3.3.3",
+    "sass-embedded": "^1.79.4",
+    "tailwindcss": "^3.4.13",
     "typescript": "~5.4.0",
     "vite": "^5.4.8",
     "vite-plugin-vue-devtools": "^7.4.6",
