--- a/GoalTracker/package.json
+++ b/GoalTracker/package.json
@@ -12,7 +12,8 @@
     "build-only": "vite build",
     "type-check": "vue-tsc --build --force",
     "lint": "eslint . --ext .vue,.js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix --ignore-path .gitignore",
-    "format": "prettier --write src/"
+    "format": "prettier --write src/",
+    "make-i18n": "typesafe-i18n"
   },
   "dependencies": {
     "@vueuse/core": "^11.1.0",
@@ -21,8 +22,10 @@
     "lucide-vue-next": "^0.446.0",
     "pinia": "^2.2.2",
     "radix-vue": "^1.9.6",
+    "sass": "^1.79.4",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "typesafe-i18n": "^5.26.2",
     "vue": "^3.5.10",
     "vue-router": "^4.4.5"
   },
