added compound calc

--- a/GoalTracker/package.json
+++ b/GoalTracker/package.json
@@ -20,6 +20,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.446.0",
+    "luxon": "^3.5.0",
     "pinia": "^2.2.2",
     "radix-vue": "^1.9.6",
     "sass": "^1.79.4",
@@ -36,6 +37,7 @@
     "@rushstack/eslint-patch": "^1.8.0",
     "@tsconfig/node20": "^20.1.4",
     "@types/jsdom": "^21.1.7",
+    "@types/luxon": "^3.4.2",
     "@types/node": "^20.14.5",
     "@vitejs/plugin-vue": "^5.0.5",
     "@vue/eslint-config-prettier": "^9.0.0",
